Text related styles

--- a/src/vars.css
+++ b/src/vars.css
@@ -3,4 +3,8 @@
 	--font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
 	--font-family-serif: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 	--font-famiy-mono: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+
+	--line-height: 1.5;
+	--font-weight: 400;
+	--font-size: 18px;
 }
