--- a/src/vars.css
+++ b/src/vars.css
@@ -7,4 +7,7 @@
 	--line-height: 1.5;
 	--font-weight: 400;
 	--font-size: 18px;
+
+	--primary-color: #296eab;
+	--navbar-active-color: var( --primary-color );
 }
