Improved code and kbd styles

--- a/src/elements.css
+++ b/src/elements.css
@@ -45,3 +45,11 @@ kbd,
 samp {
 	font-family: var( --font-family-mono );
 }
+
+code, kbd {
+	white-space: pre-wrap;
+	border-radius: 3px;
+	padding: 0.2em 0.4em;
+	background-color: var( --code-bg-color );
+	color: var( --code-color );
+}
