--- a/src/vars.css
+++ b/src/vars.css
@@ -10,6 +10,9 @@
 	--font-weight: 400;
 	--font-size: 18px;
 
+	--code-bg-color: #f3f3f6;
+	--code-color: #d43939;
+
 	--grid-gutter: 0px;
 
 	--primary-color: #296eab;
