--- a/src/elements.css
+++ b/src/elements.css
@@ -12,12 +12,7 @@ html, body {
 	line-height: var( --line-height );
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
 }
 h1 {
@@ -43,10 +38,7 @@ li::marker {
 	font-weight: bold;
 }
 
-pre,
-code,
-kbd,
-samp {
+pre, code, kbd, samp {
 	font-family: var( --font-family-mono );
 }
 
@@ -70,8 +62,7 @@ table.striped tr:nth-of-type( 2n ) {
 	background-color: var( --table-stripe-color );
 }
 
-td,
-th {
+td, th {
 	vertical-align: middle;
 	padding: 0.1rem 0.5rem;
 }
