--- a/src/vars.css
+++ b/src/vars.css
@@ -8,7 +8,7 @@
 
 	--line-height: 1.5;
 	--font-weight: 400;
-	--font-size: 18px;
+	--font-size: 1.25rem;
 
 	--code-bg-color: #f3f3f6;
 	--code-color: #d43939;
@@ -19,4 +19,10 @@
 	--navbar-active-color: var( --primary-color );
 	--table-stripe-color: #edf0f3;
 	--table-header-line-color: var( --table-strip-color );
+}
+
+@media screen and (max-width: 699px) {
+	:root {
+		--font-size: 1rem;
+	}
 }
