--- a/src/vars.css
+++ b/src/vars.css
@@ -13,6 +13,10 @@
 	--code-bg-color: #f3f3f6;
 	--code-color: #d43939;
 
+	--blockquote-background: #f4f4f4;
+	--blockquote-border: #c4c4c4;
+	--blockquote-shadow: #747474;
+
 	--grid-gutter: 1px;
 
 	--primary-color: #296eab;
